examples/semantics/errors/error7.grace
fun error7 () : nothing
{
	if("adfdfs" > "fd") then{
		puti(9);
	}
}
